testdata/valid/range_05.lisp
(defcolumns (X :i16) (Y :i16))
(definrange (- X Y) 8)
