testdata/invalid/compute_invalid_01.lisp
;;error:3:20-21:malformed target columns
(defcolumns (X :i16))
(defcomputed Y (id X))
